gccida/g1/put_condition_code
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6003:27: error: must use 'enum' tag to refer to type 'rtx_code'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6003:42: error: must use 'enum' tag to refer to type 'machine_mode'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6005:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6007:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code first_code[3]; // [rsp+Ch] [rbp-3Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6008:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code second_code; // [rsp+18h] [rbp-30h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6009:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code bypass_code[11]; // [rsp+1Ch] [rbp-2Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6017:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5554, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6039:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5600, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6045:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5571, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6050:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5610, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6061:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5587, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6067:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5605, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6068:21: error: use of undeclared identifier 'stru_665A39'
p_chain = ( char *)&stru_665A39._chain + 3; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6070:21: error: use of undeclared identifier 'stru_665A39'
p_chain = ( char *)&stru_665A39._chain + 6; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6074:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5578, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6075:21: error: use of undeclared identifier 'stru_665A39'
p_chain = ( char *)&stru_665A39._fileno + 1; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6081:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5615, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6086:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5591, "put_condition_code"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/i386.c:6095:27: error: use of undeclared identifier 'stru_665A39'
p_chain = ( const char *)&stru_665A39._chain; 
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/put_condition_code/src/obj/i386.o] Error 1
